fix empty text overflow

--- a/Netptune.App/ClientApp/src/app/modules/project-tasks/index/project-tasks.index.component.scss
+++ b/Netptune.App/ClientApp/src/app/modules/project-tasks/index/project-tasks.index.component.scss
@@ -129,6 +129,8 @@ h4 {
       color: #808080;
       margin: 0;
       margin-bottom: 3rem;
+      margin-left: 4rem;
+      margin-right: 4rem;
     }
   }
 }
